--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@react-three/fiber": "^8.15.0",
     "@tanstack/react-query": "^5.56.0",
     "@types/three": "^0.181.0",
+    "@uniswap/sdk-core": "^7.9.0",
+    "@uniswap/universal-router-sdk": "^4.23.0",
+    "@uniswap/v3-sdk": "^3.26.0",
+    "ethers": "^5.8.0",
     "next": "14.2.15",
     "phaser": "^3.80.1",
     "react": "^18.3.1",
